kustomize/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blog-redirectscheme
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
