kustomize/deploy.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
  namespace: blog
spec:
  selector:
    app: hugo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: blog-redirectscheme
  namespace: blog
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-http
  namespace: blog
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`blog.incubator4.com`)
      kind: Rule
      middlewares:                    # [5]
        - name: blog-redirectscheme             # [6]
      services:
        - name: blog-svc
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-https
  namespace: blog
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: aliResolver
  routes:
    - match: Host(`blog.incubator4.com`)
      kind: Rule
      services:
        - name: blog-svc
          port: 80
