kustomize/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-ingress
  namespace: blog
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`blog.incubator4.com`)
      kind: Rule
      middlewares:                    # [5]
        - name: blog-redirectscheme             # [6]
      services:
        - name: blog-svc
          port: 80
